hphp/test/zend/good/Zend/tests/bug44414.php.expectf

Fatal error: Class C contains abstract method (foo) and must therefore be declared abstract or implement the remaining methods in %s/bug44414.php on line 8
